# ds-cookiecutter

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  DEVELOPERS.md  GUIDELINES.md  GUIDELINES.md~  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/: labels.yml  pull_request_template.md  release-drafter.yml
.github/workflows/: docs.yml  labeler.yml  release.yml  test.yml
css/: extra.css
developers/: index.html
docs/: README.md  developers.md  index.md  mkdocs.yml  quickstart.md  structure.md
docs/css/: extra.css
docs/docs/: examples.md  faq.md  guidelines.md  index.md  quickstart.md  roadmap.md  structure.md  tutorial.md
docs/docs/css/: extra.css
docs/docs/examples/: index.md  industrial_taxonomy.md
examples/: index.html
examples/industrial_taxonomy/: index.html
faq/: index.html
flowrider/: bundle.py  cache.py  decorators.py  metaflow_cli_wrapper.py  metaflow_client.py  metaflow_runner.py
guidelines/: index.html
hooks/: post_gen_project.sh  pre_gen_project.py
make_commands/: index.html
quickstart/: index.html
roadmap/: index.html
search/: search_index.json
structure/: index.html
tests/: Dockerfile  conftest.py  docker-compose.yml  test_creation.py  test_post_gen_hook.py
tutorial/: index.html
{{ cookiecutter.module_name }}/: .Renviron  .env  .envrc  .gitignore  .lintr  .pre-commit-config.yaml  DESCRIPTION  LICENSE  README.md  environment.yaml  pyproject.toml
{{ cookiecutter.module_name }}/.cookiecutter/: config
{{ cookiecutter.module_name }}/.github/workflows/: pre-commit.yaml
{{ cookiecutter.module_name }}/.recipes/: GithubCreation.md  MetaflowAWS.md
{{ cookiecutter.module_name }}/docs/: conf.py  index.rst
{{ cookiecutter.module_name }}/{{ cookiecutter.module_name }}/: __init__.py
{{ cookiecutter.module_name }}/{{ cookiecutter.module_name }}/config/: logging.yaml
{{ cookiecutter.repo_name }}/: .darglint  .env  .env.shared  .envrc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  conda_environment.yaml  environment.yaml  flowrider.py  logging.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test.py  test_environment.py
{{ cookiecutter.repo_name }}/.cookiecutter/: config
{{ cookiecutter.repo_name }}/.cookiecutter/scripts/: conda_activate.sh  create_bucket.sh  create_repo.sh  import.sh  install_metaflow_aws.sh
{{ cookiecutter.repo_name }}/.githooks/: pre-commit
{{ cookiecutter.repo_name }}/.github/: pull_request_template.md
{{ cookiecutter.repo_name }}/.recipes/: MetaflowAWS.md
{{ cookiecutter.repo_name }}/common/{{ cookiecutter.repo_name }}/: __init__.py
{{ cookiecutter.repo_name }}/docs/: Makefile  conf.py  index.rst
{{ cookiecutter.repo_name }}/flowrider/: README.md  __init__.py  __main__.py  bundle.py  cli.py  config_parser.py  metaflow_cli_wrapper.py  metaflow_runner.py  runner.py  utils.py
{{ cookiecutter.repo_name }}/flowrider/cli/: cli.py  config_parser.py  runner.py  test_runner.py
{{ cookiecutter.repo_name }}/flowrider/client/: __init__.py  cache.py  getter.py
{{ cookiecutter.repo_name }}/flowrider/flow/: decorators.py
{{ cookiecutter.repo_name }}/inputs/: README.md
{{ cookiecutter.repo_name }}/notebooks/: notebook_preamble.ipy
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/: __init__.py  make_dataset.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/config/: logging.yaml
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/config/pipeline/example/: example_flow_local.yaml
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/data/: make_dataset.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/getters/: README.md  example.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/pipeline/: README.md
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/pipeline/example/: example_flow.py
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/queries/: README.md
{{ cookiecutter.repo_name }}/{{ cookiecutter.repo_name }}/scripts/: README.md
