[project]
name = "ds-cookiecutter"
version = "0.4.0"
description = "DSP cookiecutter template"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "cookiecutter>=2.6.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocs-material-extensions>=1.3.1",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.10",
    "tomli>=2.2.1",
]
